--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
   },
   "homepage": "https://github.com/Leanka/Trello#readme",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "node-fetch": "^2.1.2",
     "babel-cli": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0"
+    "babel-preset-es2015": "^6.0.0",
+    "body-parser": "^1.18.3",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "morgan": "^1.9.0",
+    "node-fetch": "^2.1.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
