--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request": "^2.87.0"
   }
 }
