--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "isomorphic-fetch": "^2.2.1",
+    "local-storage": "^1.4.2",
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "store": "^2.0.12"
   }
 }
